--- a/index.html
+++ b/index.html
@@ -5,10 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Personal Website</title>
     <style>
-        body { font-family: Arial, sans-serif; }
-        header { background-color: #4CAF50; color: white; padding: 10px; text-align: center; }
-        main { padding: 20px; }
-        footer { background-color: #f1f1f1; text-align: center; padding: 10px; margin-top: 20px; }
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #ffffff;
+            color: #000000;
+            margin: 0;
+            padding: 20px;
+        }
+        header, footer {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        main {
+            max-width: 800px;
+            margin: 0 auto;
+        }
     </style>
 </head>
 <body>
